Доработал автоматизацию классов

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
-    "name": "task-force/vendor",
+	"name": "nazaryuzhyn/task-force",
+	"description": "Study project",
     "authors": [
         {
             "name": "Nazar Yuzhyn",
